--- a/inventory/intended/configs/DC-LEAF2.cfg
+++ b/inventory/intended/configs/DC-LEAF2.cfg
@@ -2,7 +2,6 @@
 !
 alias 1min show log last 1 minute
 alias tail bash sudo tail -f /var/log/messages
-
 !
 daemon TerminAttr
    exec /usr/bin/TerminAttr -cvaddr=apiserver.arista.io:443 -cvauth=token-secure,/mnt/flash/cv-onboarding-token -cvvrf=management -disableaaa -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
@@ -64,6 +63,39 @@ username dcapetz ssh-key ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDZ148VUrWGE12gbl/
 !
 clock timezone US/Central
 !
+vlan 10
+   name Tenant_10_OP_Zone_1
+!
+vlan 11
+   name Tenant_10_OP_Zone_2
+!
+vlan 12
+   name Tenant_10_WEB_Zone_1
+!
+vlan 13
+   name Tenant_10_WEB_Zone_2
+!
+vlan 14
+   name Tenant_10_VMOTION
+!
+vlan 20
+   name Tenant_20_OP_Zone_1
+!
+vlan 21
+   name Tenant_20_OP_Zone_2
+!
+vlan 3009
+   name MLAG_iBGP_Tenant_10_OP_Zone
+   trunk group LEAF_PEER_L3
+!
+vlan 3010
+   name MLAG_iBGP_Tenant_10_WEB_Zone
+   trunk group LEAF_PEER_L3
+!
+vlan 3019
+   name MLAG_iBGP_Tenant_20_OP_Zone
+   trunk group LEAF_PEER_L3
+!
 vlan 4093
    name LEAF_PEER_L3
    trunk group LEAF_PEER_L3
@@ -73,6 +105,12 @@ vlan 4094
    trunk group MLAG
 !
 vrf instance management
+!
+vrf instance Tenant_10_OP_Zone
+!
+vrf instance Tenant_10_WEB_Zone
+!
+vrf instance Tenant_20_OP_Zone
 !
 interface Port-Channel551
    description MLAG_PEER_DC-LEAF1_Po551
@@ -117,11 +155,86 @@ interface Loopback1
    no shutdown
    ip address 10.255.255.1/32
 !
+interface Loopback10
+   description Tenant_10_OP_Zone_VTEP_DIAGNOSTICS
+   no shutdown
+   vrf Tenant_10_OP_Zone
+   ip address 10.255.10.2/32
+!
+interface Loopback11
+   description Tenant_10_WEB_Zone_VTEP_DIAGNOSTICS
+   no shutdown
+   vrf Tenant_10_WEB_Zone
+   ip address 10.255.11.2/32
+!
+interface Loopback20
+   description Tenant_20_OP_Zone_VTEP_DIAGNOSTICS
+   no shutdown
+   vrf Tenant_20_OP_Zone
+   ip address 10.255.20.2/32
+!
 interface Management1
    description oob_management
    no shutdown
    vrf management
    ip address 10.99.99.181/24
+!
+interface Vlan10
+   description Tenant_10_OP_Zone_1
+   no shutdown
+   vrf Tenant_10_OP_Zone
+   ip address virtual 10.10.10.1/24
+!
+interface Vlan11
+   description Tenant_10_OP_Zone_2
+   no shutdown
+   vrf Tenant_10_OP_Zone
+   ip address virtual 10.10.11.1/24
+!
+interface Vlan12
+   description Tenant_10_WEB_Zone_1
+   no shutdown
+   vrf Tenant_10_WEB_Zone
+   ip address virtual 10.10.12.1/24
+!
+interface Vlan13
+   description Tenant_10_WEB_Zone_2
+   no shutdown
+   vrf Tenant_10_WEB_Zone
+   ip address virtual 10.10.13.1/24
+!
+interface Vlan20
+   description Tenant_20_OP_Zone_1
+   no shutdown
+   vrf Tenant_20_OP_Zone
+   ip address virtual 10.20.20.0/24
+!
+interface Vlan21
+   description Tenant_20_OP_Zone_2
+   no shutdown
+   vrf Tenant_20_OP_Zone
+   ip address virtual 10.20.21.1/24
+!
+interface Vlan3009
+   description MLAG_PEER_L3_iBGP: vrf Tenant_10_OP_Zone
+   no shutdown
+   mtu 1500
+   vrf Tenant_10_OP_Zone
+   ip address 10.1.1.1/31
+!
+interface Vlan3010
+   description MLAG_PEER_L3_iBGP: vrf Tenant_10_WEB_Zone
+   no shutdown
+   mtu 1500
+   vrf Tenant_10_WEB_Zone
+   ip address 10.1.1.1/31
+!
+interface Vlan3019
+   description MLAG_PEER_L3_iBGP: vrf Tenant_20_OP_Zone
+   no shutdown
+   mtu 1500
+   vrf Tenant_20_OP_Zone
+   ip address 10.1.1.1/31
 !
 interface Vlan4093
    description MLAG_PEER_L3_PEERING
@@ -141,16 +254,33 @@ interface Vxlan1
    vxlan source-interface Loopback1
    vxlan virtual-router encapsulation mac-address mlag-system-id
    vxlan udp-port 4789
+   vxlan vlan 10 vni 10010
+   vxlan vlan 11 vni 10011
+   vxlan vlan 12 vni 10012
+   vxlan vlan 13 vni 10013
+   vxlan vlan 14 vni 10014
+   vxlan vlan 20 vni 10020
+   vxlan vlan 21 vni 10021
+   vxlan vrf Tenant_10_OP_Zone vni 10
+   vxlan vrf Tenant_10_WEB_Zone vni 11
+   vxlan vrf Tenant_20_OP_Zone vni 20
 !
 mac address-table aging-time 1300
 !
 ip virtual-router mac-address 00:1c:73:00:00:01
+!
+ip address virtual source-nat vrf Tenant_10_OP_Zone address 10.255.10.2
+ip address virtual source-nat vrf Tenant_10_WEB_Zone address 10.255.11.2
+ip address virtual source-nat vrf Tenant_20_OP_Zone address 10.255.20.2
 !
 ip access-list standard SNMP-ACL
    10 permit 10.0.0.0/8
 !
 ip routing
 no ip routing vrf management
+ip routing vrf Tenant_10_OP_Zone
+ip routing vrf Tenant_10_WEB_Zone
+ip routing vrf Tenant_20_OP_Zone
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 10.255.254.0/24 eq 32
@@ -217,6 +347,41 @@ router bgp 65101
    neighbor 10.255.252.2 description DC-SPINE2
    redistribute connected route-map RM-CONN-2-BGP
    !
+   vlan 10
+      rd 10.255.254.2:10010
+      route-target both 10010:10010
+      redistribute learned
+   !
+   vlan 11
+      rd 10.255.254.2:10011
+      route-target both 10011:10011
+      redistribute learned
+   !
+   vlan 12
+      rd 10.255.254.2:10012
+      route-target both 10012:10012
+      redistribute learned
+   !
+   vlan 13
+      rd 10.255.254.2:10013
+      route-target both 10013:10013
+      redistribute learned
+   !
+   vlan 14
+      rd 10.255.254.2:10014
+      route-target both 10014:10014
+      redistribute learned
+   !
+   vlan 20
+      rd 10.255.254.2:10020
+      route-target both 10020:10020
+      redistribute learned
+   !
+   vlan 21
+      rd 10.255.254.2:10021
+      route-target both 10021:10021
+      redistribute learned
+   !
    address-family evpn
       neighbor EVPN-OVERLAY-PEERS activate
    !
@@ -224,6 +389,30 @@ router bgp 65101
       no neighbor EVPN-OVERLAY-PEERS activate
       neighbor IPv4-UNDERLAY-PEERS activate
       neighbor MLAG-IPv4-UNDERLAY-PEER activate
+   !
+   vrf Tenant_10_OP_Zone
+      rd 10.255.254.2:10
+      route-target import evpn 10:10
+      route-target export evpn 10:10
+      router-id 10.255.254.2
+      neighbor 10.1.1.0 peer group MLAG-IPv4-UNDERLAY-PEER
+      redistribute connected
+   !
+   vrf Tenant_10_WEB_Zone
+      rd 10.255.254.2:11
+      route-target import evpn 11:11
+      route-target export evpn 11:11
+      router-id 10.255.254.2
+      neighbor 10.1.1.0 peer group MLAG-IPv4-UNDERLAY-PEER
+      redistribute connected
+   !
+   vrf Tenant_20_OP_Zone
+      rd 10.255.254.2:20
+      route-target import evpn 20:20
+      route-target export evpn 20:20
+      router-id 10.255.254.2
+      neighbor 10.1.1.0 peer group MLAG-IPv4-UNDERLAY-PEER
+      redistribute connected
 !
 ip tacacs vrf management source-interface Management1
 !
