--- a/inventory/intended/structured_configs/DC-BORDER1-debug-vars.yml
+++ b/inventory/intended/structured_configs/DC-BORDER1-debug-vars.yml
@@ -124,14 +124,116 @@ event_monitor:
   enabled: true
 aliases: 'alias 1min show log last 1 minute
 
-  alias tail bash sudo tail -f /var/log/messages
-
-  '
+  alias tail bash sudo tail -f /var/log/messages'
 p2p_uplinks_mtu: 1500
 bfd_multihop:
   interval: 1200
   min_rx: 1200
   multiplier: 3
+mlag_ibgp_peering_vrfs:
+  base_vlan: 3000
+tenants:
+  Tenant_10:
+    mac_vrf_vni_base: 10000
+    vrfs:
+      Tenant_10_OP_Zone:
+        vrf_vni: 10
+        vtep_diagnostic:
+          loopback: 10
+          loopback_ip_range: 10.255.10.0/24
+        svis:
+          10:
+            name: Tenant_10_OP_Zone_1
+            tags:
+            - compute
+            enabled: true
+            ip_address_virtual: 10.10.10.1/24
+          11:
+            name: Tenant_10_OP_Zone_2
+            tags:
+            - compute
+            enabled: true
+            ip_address_virtual: 10.10.11.1/24
+          19:
+            name: Tenant_10_OP_Zone_FW
+            tags:
+            - border
+            enabled: true
+            ip_virtual_router_addresses:
+            - 10.10.19.1
+            nodes:
+              DC-BORDER1:
+                ip_address: 10.10.19.2/24
+              DC-BORDER2:
+                ip_address: 10.10.19.3/24
+      Tenant_10_WEB_Zone:
+        vrf_vni: 11
+        vtep_diagnostic:
+          loopback: 11
+          loopback_ip_range: 10.255.11.0/24
+        svis:
+          12:
+            name: Tenant_10_WEB_Zone_1
+            tags:
+            - compute
+            enabled: true
+            ip_address_virtual: 10.10.12.1/24
+          13:
+            name: Tenant_10_WEB_Zone_2
+            tags:
+            - compute
+            enabled: true
+            ip_address_virtual: 10.10.13.1/24
+          18:
+            name: Tenant_10_WEB_Zone_FW
+            tags:
+            - border
+            enabled: true
+            ip_virtual_router_addresses:
+            - 10.10.18.1
+            nodes:
+              DC-BORDER1:
+                ip_address: 10.10.18.2/24
+              DC-BORDER2:
+                ip_address: 10.10.18.3/24
+    l2vlans:
+      14:
+        name: Tenant_10_VMOTION
+        tags:
+        - compute
+  Tenant_20:
+    mac_vrf_vni_base: 10000
+    vrfs:
+      Tenant_20_OP_Zone:
+        vrf_vni: 20
+        vtep_diagnostic:
+          loopback: 20
+          loopback_ip_range: 10.255.20.0/24
+        svis:
+          20:
+            name: Tenant_20_OP_Zone_1
+            tags:
+            - compute
+            enabled: true
+            ip_address_virtual: 10.20.20.0/24
+          21:
+            name: Tenant_20_OP_Zone_2
+            tags:
+            - compute
+            enabled: true
+            ip_address_virtual: 10.20.21.1/24
+          29:
+            name: Tenant_20_OP_Zone_FW
+            tags:
+            - border
+            enabled: true
+            ip_virtual_router_addresses:
+            - 10.20.29.1
+            nodes:
+              DC-BORDER1:
+                ip_address: 10.20.29.2/24
+              DC-BORDER2:
+                ip_address: 10.20.29.3/24
 type: l3leaf
 l3leaf:
   defaults:
@@ -168,12 +270,18 @@ l3leaf:
           uplink_switch_interfaces:
           - Ethernet1/1
           - Ethernet1/1
+          filter:
+            tags:
+            - compute
         DC-LEAF2:
           id: 2
           mgmt_ip: 10.99.99.181/24
           uplink_switch_interfaces:
           - Ethernet2/1
           - Ethernet2/1
+          filter:
+            tags:
+            - compute
     DC_COMPUTE_POD2:
       bgp_as: 65102
       nodes:
@@ -183,12 +291,18 @@ l3leaf:
           uplink_switch_interfaces:
           - Ethernet3/1
           - Ethernet3/1
+          filter:
+            tags:
+            - compute
         DC-LEAF4:
           id: 4
           mgmt_ip: 10.99.99.183/24
           uplink_switch_interfaces:
           - Ethernet4/1
           - Ethernet4/1
+          filter:
+            tags:
+            - compute
     DC_BORDER_LEAVES:
       bgp_as: 65199
       nodes:
@@ -198,20 +312,29 @@ l3leaf:
           uplink_switch_interfaces:
           - Ethernet7/1
           - Ethernet7/1
+          filter:
+            tags:
+            - border
         DC-BORDER2:
           id: 128
           mgmt_ip: 10.99.99.187/24
           uplink_switch_interfaces:
           - Ethernet8/1
           - Ethernet8/1
+          filter:
+            tags:
+            - border
 inventory_file: /workspaces/avd-demo/inventory/inventory.yml
 inventory_dir: /workspaces/avd-demo/inventory
 inventory_hostname: DC-BORDER1
 inventory_hostname_short: DC-BORDER1
 group_names:
+- DC
 - DC_BORDER_LEAVES
 - DC_FABRIC
 - DC_LEAVES
+- DC_SERVERS
+- DC_TENANT_NETWORKS
 ansible_facts:
   avd_switch_facts:
     DC-SPINE1:
@@ -536,7 +659,7 @@ ansible_facts:
         filter_tenants:
         - all
         filter_tags:
-        - all
+        - border
         - DC_BORDER_LEAVES
         filter_only_vlans_in_use: false
         virtual_router_mac_address: 00:1c:73:00:00:01
@@ -550,7 +673,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: ''
+        vlans: 18-19,29
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.255.254.127
         igmp_snooping_enabled: true
@@ -737,7 +860,7 @@ ansible_facts:
         filter_tenants:
         - all
         filter_tags:
-        - all
+        - border
         - DC_BORDER_LEAVES
         filter_only_vlans_in_use: false
         virtual_router_mac_address: 00:1c:73:00:00:01
@@ -751,7 +874,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: ''
+        vlans: 18-19,29
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.255.254.128
         igmp_snooping_enabled: true
@@ -938,7 +1061,7 @@ ansible_facts:
         filter_tenants:
         - all
         filter_tags:
-        - all
+        - compute
         - DC_COMPUTE_POD1
         filter_only_vlans_in_use: false
         virtual_router_mac_address: 00:1c:73:00:00:01
@@ -952,7 +1075,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: ''
+        vlans: 10-14,20-21
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.255.254.1
         igmp_snooping_enabled: true
@@ -1139,7 +1262,7 @@ ansible_facts:
         filter_tenants:
         - all
         filter_tags:
-        - all
+        - compute
         - DC_COMPUTE_POD1
         filter_only_vlans_in_use: false
         virtual_router_mac_address: 00:1c:73:00:00:01
@@ -1153,7 +1276,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: ''
+        vlans: 10-14,20-21
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.255.254.2
         igmp_snooping_enabled: true
@@ -1340,7 +1463,7 @@ ansible_facts:
         filter_tenants:
         - all
         filter_tags:
-        - all
+        - compute
         - DC_COMPUTE_POD2
         filter_only_vlans_in_use: false
         virtual_router_mac_address: 00:1c:73:00:00:01
@@ -1354,7 +1477,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: ''
+        vlans: 10-14,20-21
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.255.254.3
         igmp_snooping_enabled: true
@@ -1541,7 +1664,7 @@ ansible_facts:
         filter_tenants:
         - all
         filter_tags:
-        - all
+        - compute
         - DC_COMPUTE_POD2
         filter_only_vlans_in_use: false
         virtual_router_mac_address: 00:1c:73:00:00:01
@@ -1555,7 +1678,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: ''
+        vlans: 10-14,20-21
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.255.254.4
         igmp_snooping_enabled: true
@@ -2029,7 +2152,7 @@ avd_switch_facts:
       filter_tenants:
       - all
       filter_tags:
-      - all
+      - border
       - DC_BORDER_LEAVES
       filter_only_vlans_in_use: false
       virtual_router_mac_address: 00:1c:73:00:00:01
@@ -2043,7 +2166,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: ''
+      vlans: 18-19,29
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.255.254.127
       igmp_snooping_enabled: true
@@ -2230,7 +2353,7 @@ avd_switch_facts:
       filter_tenants:
       - all
       filter_tags:
-      - all
+      - border
       - DC_BORDER_LEAVES
       filter_only_vlans_in_use: false
       virtual_router_mac_address: 00:1c:73:00:00:01
@@ -2244,7 +2367,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: ''
+      vlans: 18-19,29
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.255.254.128
       igmp_snooping_enabled: true
@@ -2431,7 +2554,7 @@ avd_switch_facts:
       filter_tenants:
       - all
       filter_tags:
-      - all
+      - compute
       - DC_COMPUTE_POD1
       filter_only_vlans_in_use: false
       virtual_router_mac_address: 00:1c:73:00:00:01
@@ -2445,7 +2568,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: ''
+      vlans: 10-14,20-21
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.255.254.1
       igmp_snooping_enabled: true
@@ -2632,7 +2755,7 @@ avd_switch_facts:
       filter_tenants:
       - all
       filter_tags:
-      - all
+      - compute
       - DC_COMPUTE_POD1
       filter_only_vlans_in_use: false
       virtual_router_mac_address: 00:1c:73:00:00:01
@@ -2646,7 +2769,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: ''
+      vlans: 10-14,20-21
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.255.254.2
       igmp_snooping_enabled: true
@@ -2833,7 +2956,7 @@ avd_switch_facts:
       filter_tenants:
       - all
       filter_tags:
-      - all
+      - compute
       - DC_COMPUTE_POD2
       filter_only_vlans_in_use: false
       virtual_router_mac_address: 00:1c:73:00:00:01
@@ -2847,7 +2970,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: ''
+      vlans: 10-14,20-21
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.255.254.3
       igmp_snooping_enabled: true
@@ -3034,7 +3157,7 @@ avd_switch_facts:
       filter_tenants:
       - all
       filter_tags:
-      - all
+      - compute
       - DC_COMPUTE_POD2
       filter_only_vlans_in_use: false
       virtual_router_mac_address: 00:1c:73:00:00:01
@@ -3048,7 +3171,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: ''
+      vlans: 10-14,20-21
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.255.254.4
       igmp_snooping_enabled: true
@@ -3265,7 +3388,7 @@ switch:
   filter_tenants:
   - all
   filter_tags:
-  - all
+  - border
   - DC_BORDER_LEAVES
   filter_only_vlans_in_use: false
   virtual_router_mac_address: 00:1c:73:00:00:01
@@ -3279,7 +3402,7 @@ switch:
   enable_trunk_groups: false
   local_endpoint_trunk_groups: []
   endpoint_trunk_groups: []
-  vlans: ''
+  vlans: 18-19,29
   spanning_tree_mode: mstp
   overlay_rd_type_admin_subfield: 10.255.254.127
   igmp_snooping_enabled: true
@@ -3406,10 +3529,10 @@ ansible_config_file: /workspaces/avd-demo/ansible.cfg
 groups:
   all:
   - cvp
-  - DC-SPINE1
-  - DC-SPINE2
   - DC-BORDER1
   - DC-BORDER2
+  - DC-SPINE1
+  - DC-SPINE2
   - DC-LEAF1
   - DC-LEAF2
   - DC-LEAF3
@@ -3417,6 +3540,15 @@ groups:
   ungrouped: []
   CVP:
   - cvp
+  DC:
+  - DC-BORDER1
+  - DC-BORDER2
+  - DC-SPINE1
+  - DC-SPINE2
+  - DC-LEAF1
+  - DC-LEAF2
+  - DC-LEAF3
+  - DC-LEAF4
   DC_FABRIC:
   - DC-SPINE1
   - DC-SPINE2
@@ -3450,7 +3582,21 @@ groups:
   DC_BORDER_LEAVES:
   - DC-BORDER1
   - DC-BORDER2
-omit: __omit_place_holder__590fcc9121d76ce46e4e1fa0bdb88ac7a8c8bf64
+  DC_TENANT_NETWORKS:
+  - DC-BORDER1
+  - DC-BORDER2
+  - DC-LEAF1
+  - DC-LEAF2
+  - DC-LEAF3
+  - DC-LEAF4
+  DC_SERVERS:
+  - DC-BORDER1
+  - DC-BORDER2
+  - DC-LEAF1
+  - DC-LEAF2
+  - DC-LEAF3
+  - DC-LEAF4
+omit: __omit_place_holder__8511f7f203c4b641eab087aac023f45a48bb02a0
 ansible_version:
   string: 2.14.4
   full: 2.14.4
