--- a/inventory/intended/structured_configs/DC-SPINE2-debug-vars.yml
+++ b/inventory/intended/structured_configs/DC-SPINE2-debug-vars.yml
@@ -124,9 +124,7 @@ event_monitor:
   enabled: true
 aliases: 'alias 1min show log last 1 minute
 
-  alias tail bash sudo tail -f /var/log/messages
-
-  '
+  alias tail bash sudo tail -f /var/log/messages'
 p2p_uplinks_mtu: 1500
 bfd_multihop:
   interval: 1200
@@ -156,6 +154,7 @@ inventory_dir: /workspaces/avd-demo/inventory
 inventory_hostname: DC-SPINE2
 inventory_hostname_short: DC-SPINE2
 group_names:
+- DC
 - DC_FABRIC
 - DC_SPINES
 ansible_facts:
@@ -482,7 +481,7 @@ ansible_facts:
         filter_tenants:
         - all
         filter_tags:
-        - all
+        - border
         - DC_BORDER_LEAVES
         filter_only_vlans_in_use: false
         virtual_router_mac_address: 00:1c:73:00:00:01
@@ -496,7 +495,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: ''
+        vlans: 18-19,29
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.255.254.127
         igmp_snooping_enabled: true
@@ -683,7 +682,7 @@ ansible_facts:
         filter_tenants:
         - all
         filter_tags:
-        - all
+        - border
         - DC_BORDER_LEAVES
         filter_only_vlans_in_use: false
         virtual_router_mac_address: 00:1c:73:00:00:01
@@ -697,7 +696,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: ''
+        vlans: 18-19,29
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.255.254.128
         igmp_snooping_enabled: true
@@ -884,7 +883,7 @@ ansible_facts:
         filter_tenants:
         - all
         filter_tags:
-        - all
+        - compute
         - DC_COMPUTE_POD1
         filter_only_vlans_in_use: false
         virtual_router_mac_address: 00:1c:73:00:00:01
@@ -898,7 +897,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: ''
+        vlans: 10-14,20-21
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.255.254.1
         igmp_snooping_enabled: true
@@ -1085,7 +1084,7 @@ ansible_facts:
         filter_tenants:
         - all
         filter_tags:
-        - all
+        - compute
         - DC_COMPUTE_POD1
         filter_only_vlans_in_use: false
         virtual_router_mac_address: 00:1c:73:00:00:01
@@ -1099,7 +1098,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: ''
+        vlans: 10-14,20-21
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.255.254.2
         igmp_snooping_enabled: true
@@ -1286,7 +1285,7 @@ ansible_facts:
         filter_tenants:
         - all
         filter_tags:
-        - all
+        - compute
         - DC_COMPUTE_POD2
         filter_only_vlans_in_use: false
         virtual_router_mac_address: 00:1c:73:00:00:01
@@ -1300,7 +1299,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: ''
+        vlans: 10-14,20-21
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.255.254.3
         igmp_snooping_enabled: true
@@ -1487,7 +1486,7 @@ ansible_facts:
         filter_tenants:
         - all
         filter_tags:
-        - all
+        - compute
         - DC_COMPUTE_POD2
         filter_only_vlans_in_use: false
         virtual_router_mac_address: 00:1c:73:00:00:01
@@ -1501,7 +1500,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: ''
+        vlans: 10-14,20-21
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.255.254.4
         igmp_snooping_enabled: true
@@ -1975,7 +1974,7 @@ avd_switch_facts:
       filter_tenants:
       - all
       filter_tags:
-      - all
+      - border
       - DC_BORDER_LEAVES
       filter_only_vlans_in_use: false
       virtual_router_mac_address: 00:1c:73:00:00:01
@@ -1989,7 +1988,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: ''
+      vlans: 18-19,29
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.255.254.127
       igmp_snooping_enabled: true
@@ -2176,7 +2175,7 @@ avd_switch_facts:
       filter_tenants:
       - all
       filter_tags:
-      - all
+      - border
       - DC_BORDER_LEAVES
       filter_only_vlans_in_use: false
       virtual_router_mac_address: 00:1c:73:00:00:01
@@ -2190,7 +2189,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: ''
+      vlans: 18-19,29
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.255.254.128
       igmp_snooping_enabled: true
@@ -2377,7 +2376,7 @@ avd_switch_facts:
       filter_tenants:
       - all
       filter_tags:
-      - all
+      - compute
       - DC_COMPUTE_POD1
       filter_only_vlans_in_use: false
       virtual_router_mac_address: 00:1c:73:00:00:01
@@ -2391,7 +2390,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: ''
+      vlans: 10-14,20-21
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.255.254.1
       igmp_snooping_enabled: true
@@ -2578,7 +2577,7 @@ avd_switch_facts:
       filter_tenants:
       - all
       filter_tags:
-      - all
+      - compute
       - DC_COMPUTE_POD1
       filter_only_vlans_in_use: false
       virtual_router_mac_address: 00:1c:73:00:00:01
@@ -2592,7 +2591,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: ''
+      vlans: 10-14,20-21
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.255.254.2
       igmp_snooping_enabled: true
@@ -2779,7 +2778,7 @@ avd_switch_facts:
       filter_tenants:
       - all
       filter_tags:
-      - all
+      - compute
       - DC_COMPUTE_POD2
       filter_only_vlans_in_use: false
       virtual_router_mac_address: 00:1c:73:00:00:01
@@ -2793,7 +2792,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: ''
+      vlans: 10-14,20-21
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.255.254.3
       igmp_snooping_enabled: true
@@ -2980,7 +2979,7 @@ avd_switch_facts:
       filter_tenants:
       - all
       filter_tags:
-      - all
+      - compute
       - DC_COMPUTE_POD2
       filter_only_vlans_in_use: false
       virtual_router_mac_address: 00:1c:73:00:00:01
@@ -2994,7 +2993,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: ''
+      vlans: 10-14,20-21
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.255.254.4
       igmp_snooping_enabled: true
@@ -3279,10 +3278,10 @@ ansible_config_file: /workspaces/avd-demo/ansible.cfg
 groups:
   all:
   - cvp
-  - DC-SPINE1
-  - DC-SPINE2
   - DC-BORDER1
   - DC-BORDER2
+  - DC-SPINE1
+  - DC-SPINE2
   - DC-LEAF1
   - DC-LEAF2
   - DC-LEAF3
@@ -3290,6 +3289,15 @@ groups:
   ungrouped: []
   CVP:
   - cvp
+  DC:
+  - DC-BORDER1
+  - DC-BORDER2
+  - DC-SPINE1
+  - DC-SPINE2
+  - DC-LEAF1
+  - DC-LEAF2
+  - DC-LEAF3
+  - DC-LEAF4
   DC_FABRIC:
   - DC-SPINE1
   - DC-SPINE2
@@ -3323,7 +3331,21 @@ groups:
   DC_BORDER_LEAVES:
   - DC-BORDER1
   - DC-BORDER2
-omit: __omit_place_holder__590fcc9121d76ce46e4e1fa0bdb88ac7a8c8bf64
+  DC_TENANT_NETWORKS:
+  - DC-BORDER1
+  - DC-BORDER2
+  - DC-LEAF1
+  - DC-LEAF2
+  - DC-LEAF3
+  - DC-LEAF4
+  DC_SERVERS:
+  - DC-BORDER1
+  - DC-BORDER2
+  - DC-LEAF1
+  - DC-LEAF2
+  - DC-LEAF3
+  - DC-LEAF4
+omit: __omit_place_holder__8511f7f203c4b641eab087aac023f45a48bb02a0
 ansible_version:
   string: 2.14.4
   full: 2.14.4
