--- a/inventory/group_vars/DC_LEAVES.yml
+++ b/inventory/group_vars/DC_LEAVES.yml
@@ -33,10 +33,14 @@ l3leaf:
           id: 1
           mgmt_ip: 10.99.99.180/24
           uplink_switch_interfaces: ['Ethernet1/1', 'Ethernet1/1']
+          filter:
+            tags: [ compute ]
         DC-LEAF2:
           id: 2
           mgmt_ip: 10.99.99.181/24
           uplink_switch_interfaces: ['Ethernet2/1', 'Ethernet2/1']
+          filter:
+            tags: [ compute ]
     DC_COMPUTE_POD2:
       bgp_as: 65102
       nodes:
@@ -44,21 +48,14 @@ l3leaf:
           id: 3
           mgmt_ip: 10.99.99.182/24
           uplink_switch_interfaces: ['Ethernet3/1', 'Ethernet3/1']
+          filter:
+            tags: [ compute ]
         DC-LEAF4:
           id: 4
           mgmt_ip: 10.99.99.183/24
           uplink_switch_interfaces: ['Ethernet4/1', 'Ethernet4/1']
-#    DC_COMPUTE_POD3:
-#      bgp_as: 65103
-#      nodes:
-#        DC-LEAF5:
-#          id: 5
-#          mgmt_ip: 10.99.99.184/24
-#          uplink_switch_interfaces: ['Ethernet5/1', 'Ethernet5/1']
-#        DC-LEAF6:
-#          id: 6
-#          mgmt_ip: 10.99.99.185/24
-#          uplink_switch_interfaces: ['Ethernet6/1', 'Ethernet6/1']
+          filter:
+            tags: [ compute ]
     DC_BORDER_LEAVES:
       bgp_as: 65199
       nodes:
@@ -66,7 +63,11 @@ l3leaf:
           id: 127
           mgmt_ip: 10.99.99.186/24
           uplink_switch_interfaces: ['Ethernet7/1', 'Ethernet7/1']
+          filter:
+            tags: [ border ]
         DC-BORDER2:
           id: 128
           mgmt_ip: 10.99.99.187/24
           uplink_switch_interfaces: ['Ethernet8/1', 'Ethernet8/1']
+          filter:
+            tags: [ border ]
