--- a/inventory/intended/configs/DC-BORDER1.cfg
+++ b/inventory/intended/configs/DC-BORDER1.cfg
@@ -2,7 +2,6 @@
 !
 alias 1min show log last 1 minute
 alias tail bash sudo tail -f /var/log/messages
-
 !
 daemon TerminAttr
    exec /usr/bin/TerminAttr -cvaddr=apiserver.arista.io:443 -cvauth=token-secure,/mnt/flash/cv-onboarding-token -cvvrf=management -disableaaa -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
@@ -64,6 +63,27 @@ username dcapetz ssh-key ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDZ148VUrWGE12gbl/
 !
 clock timezone US/Central
 !
+vlan 18
+   name Tenant_10_WEB_Zone_FW
+!
+vlan 19
+   name Tenant_10_OP_Zone_FW
+!
+vlan 29
+   name Tenant_20_OP_Zone_FW
+!
+vlan 3009
+   name MLAG_iBGP_Tenant_10_OP_Zone
+   trunk group LEAF_PEER_L3
+!
+vlan 3010
+   name MLAG_iBGP_Tenant_10_WEB_Zone
+   trunk group LEAF_PEER_L3
+!
+vlan 3019
+   name MLAG_iBGP_Tenant_20_OP_Zone
+   trunk group LEAF_PEER_L3
+!
 vlan 4093
    name LEAF_PEER_L3
    trunk group LEAF_PEER_L3
@@ -73,6 +93,12 @@ vlan 4094
    trunk group MLAG
 !
 vrf instance management
+!
+vrf instance Tenant_10_OP_Zone
+!
+vrf instance Tenant_10_WEB_Zone
+!
+vrf instance Tenant_20_OP_Zone
 !
 interface Port-Channel551
    description MLAG_PEER_DC-BORDER2_Po551
@@ -117,11 +143,71 @@ interface Loopback1
    no shutdown
    ip address 10.255.255.127/32
 !
+interface Loopback10
+   description Tenant_10_OP_Zone_VTEP_DIAGNOSTICS
+   no shutdown
+   vrf Tenant_10_OP_Zone
+   ip address 10.255.10.127/32
+!
+interface Loopback11
+   description Tenant_10_WEB_Zone_VTEP_DIAGNOSTICS
+   no shutdown
+   vrf Tenant_10_WEB_Zone
+   ip address 10.255.11.127/32
+!
+interface Loopback20
+   description Tenant_20_OP_Zone_VTEP_DIAGNOSTICS
+   no shutdown
+   vrf Tenant_20_OP_Zone
+   ip address 10.255.20.127/32
+!
 interface Management1
    description oob_management
    no shutdown
    vrf management
    ip address 10.99.99.186/24
+!
+interface Vlan18
+   description Tenant_10_WEB_Zone_FW
+   no shutdown
+   vrf Tenant_10_WEB_Zone
+   ip address 10.10.18.2/24
+   ip virtual-router address 10.10.18.1
+!
+interface Vlan19
+   description Tenant_10_OP_Zone_FW
+   no shutdown
+   vrf Tenant_10_OP_Zone
+   ip address 10.10.19.2/24
+   ip virtual-router address 10.10.19.1
+!
+interface Vlan29
+   description Tenant_20_OP_Zone_FW
+   no shutdown
+   vrf Tenant_20_OP_Zone
+   ip address 10.20.29.2/24
+   ip virtual-router address 10.20.29.1
+!
+interface Vlan3009
+   description MLAG_PEER_L3_iBGP: vrf Tenant_10_OP_Zone
+   no shutdown
+   mtu 1500
+   vrf Tenant_10_OP_Zone
+   ip address 10.1.1.252/31
+!
+interface Vlan3010
+   description MLAG_PEER_L3_iBGP: vrf Tenant_10_WEB_Zone
+   no shutdown
+   mtu 1500
+   vrf Tenant_10_WEB_Zone
+   ip address 10.1.1.252/31
+!
+interface Vlan3019
+   description MLAG_PEER_L3_iBGP: vrf Tenant_20_OP_Zone
+   no shutdown
+   mtu 1500
+   vrf Tenant_20_OP_Zone
+   ip address 10.1.1.252/31
 !
 interface Vlan4093
    description MLAG_PEER_L3_PEERING
@@ -141,16 +227,29 @@ interface Vxlan1
    vxlan source-interface Loopback1
    vxlan virtual-router encapsulation mac-address mlag-system-id
    vxlan udp-port 4789
+   vxlan vlan 18 vni 10018
+   vxlan vlan 19 vni 10019
+   vxlan vlan 29 vni 10029
+   vxlan vrf Tenant_10_OP_Zone vni 10
+   vxlan vrf Tenant_10_WEB_Zone vni 11
+   vxlan vrf Tenant_20_OP_Zone vni 20
 !
 mac address-table aging-time 1300
 !
 ip virtual-router mac-address 00:1c:73:00:00:01
+!
+ip address virtual source-nat vrf Tenant_10_OP_Zone address 10.255.10.127
+ip address virtual source-nat vrf Tenant_10_WEB_Zone address 10.255.11.127
+ip address virtual source-nat vrf Tenant_20_OP_Zone address 10.255.20.127
 !
 ip access-list standard SNMP-ACL
    10 permit 10.0.0.0/8
 !
 ip routing
 no ip routing vrf management
+ip routing vrf Tenant_10_OP_Zone
+ip routing vrf Tenant_10_WEB_Zone
+ip routing vrf Tenant_20_OP_Zone
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 10.255.254.0/24 eq 32
@@ -217,6 +316,21 @@ router bgp 65199
    neighbor 10.255.252.2 description DC-SPINE2
    redistribute connected route-map RM-CONN-2-BGP
    !
+   vlan 18
+      rd 10.255.254.127:10018
+      route-target both 10018:10018
+      redistribute learned
+   !
+   vlan 19
+      rd 10.255.254.127:10019
+      route-target both 10019:10019
+      redistribute learned
+   !
+   vlan 29
+      rd 10.255.254.127:10029
+      route-target both 10029:10029
+      redistribute learned
+   !
    address-family evpn
       neighbor EVPN-OVERLAY-PEERS activate
    !
@@ -224,6 +338,30 @@ router bgp 65199
       no neighbor EVPN-OVERLAY-PEERS activate
       neighbor IPv4-UNDERLAY-PEERS activate
       neighbor MLAG-IPv4-UNDERLAY-PEER activate
+   !
+   vrf Tenant_10_OP_Zone
+      rd 10.255.254.127:10
+      route-target import evpn 10:10
+      route-target export evpn 10:10
+      router-id 10.255.254.127
+      neighbor 10.1.1.253 peer group MLAG-IPv4-UNDERLAY-PEER
+      redistribute connected
+   !
+   vrf Tenant_10_WEB_Zone
+      rd 10.255.254.127:11
+      route-target import evpn 11:11
+      route-target export evpn 11:11
+      router-id 10.255.254.127
+      neighbor 10.1.1.253 peer group MLAG-IPv4-UNDERLAY-PEER
+      redistribute connected
+   !
+   vrf Tenant_20_OP_Zone
+      rd 10.255.254.127:20
+      route-target import evpn 20:20
+      route-target export evpn 20:20
+      router-id 10.255.254.127
+      neighbor 10.1.1.253 peer group MLAG-IPv4-UNDERLAY-PEER
+      redistribute connected
 !
 ip tacacs vrf management source-interface Management1
 !
