--- a/inventory/intended/structured_configs/DC-LEAF1.yml
+++ b/inventory/intended/structured_configs/DC-LEAF1.yml
@@ -62,6 +62,109 @@ router_bgp:
     peer_groups:
       EVPN-OVERLAY-PEERS:
         activate: true
+  vrfs:
+    Tenant_10_OP_Zone:
+      router_id: 10.255.254.1
+      rd: 10.255.254.1:10
+      route_targets:
+        import:
+          evpn:
+          - '10:10'
+        export:
+          evpn:
+          - '10:10'
+      redistribute_routes:
+      - connected
+      neighbors:
+        10.1.1.1:
+          peer_group: MLAG-IPv4-UNDERLAY-PEER
+    Tenant_10_WEB_Zone:
+      router_id: 10.255.254.1
+      rd: 10.255.254.1:11
+      route_targets:
+        import:
+          evpn:
+          - '11:11'
+        export:
+          evpn:
+          - '11:11'
+      redistribute_routes:
+      - connected
+      neighbors:
+        10.1.1.1:
+          peer_group: MLAG-IPv4-UNDERLAY-PEER
+    Tenant_20_OP_Zone:
+      router_id: 10.255.254.1
+      rd: 10.255.254.1:20
+      route_targets:
+        import:
+          evpn:
+          - '20:20'
+        export:
+          evpn:
+          - '20:20'
+      redistribute_routes:
+      - connected
+      neighbors:
+        10.1.1.1:
+          peer_group: MLAG-IPv4-UNDERLAY-PEER
+  vlans:
+    10:
+      tenant: Tenant_10
+      rd: 10.255.254.1:10010
+      route_targets:
+        both:
+        - 10010:10010
+      redistribute_routes:
+      - learned
+    11:
+      tenant: Tenant_10
+      rd: 10.255.254.1:10011
+      route_targets:
+        both:
+        - 10011:10011
+      redistribute_routes:
+      - learned
+    12:
+      tenant: Tenant_10
+      rd: 10.255.254.1:10012
+      route_targets:
+        both:
+        - 10012:10012
+      redistribute_routes:
+      - learned
+    13:
+      tenant: Tenant_10
+      rd: 10.255.254.1:10013
+      route_targets:
+        both:
+        - 10013:10013
+      redistribute_routes:
+      - learned
+    14:
+      tenant: Tenant_10
+      rd: 10.255.254.1:10014
+      route_targets:
+        both:
+        - 10014:10014
+      redistribute_routes:
+      - learned
+    20:
+      tenant: Tenant_20
+      rd: 10.255.254.1:10020
+      route_targets:
+        both:
+        - 10020:10020
+      redistribute_routes:
+      - learned
+    21:
+      tenant: Tenant_20
+      rd: 10.255.254.1:10021
+      route_targets:
+        both:
+        - 10021:10021
+      redistribute_routes:
+      - learned
 static_routes:
 - vrf: management
   destination_address_prefix: 0.0.0.0/0
@@ -110,6 +213,15 @@ clock:
 vrfs:
   management:
     ip_routing: false
+  Tenant_10_OP_Zone:
+    tenant: Tenant_10
+    ip_routing: true
+  Tenant_10_WEB_Zone:
+    tenant: Tenant_10
+    ip_routing: true
+  Tenant_20_OP_Zone:
+    tenant: Tenant_20
+    ip_routing: true
 management_interfaces:
   Management1:
     description: oob_management
@@ -135,6 +247,42 @@ vlans:
     name: MLAG_PEER
     trunk_groups:
     - MLAG
+  10:
+    tenant: Tenant_10
+    name: Tenant_10_OP_Zone_1
+  11:
+    tenant: Tenant_10
+    name: Tenant_10_OP_Zone_2
+  3009:
+    tenant: Tenant_10
+    name: MLAG_iBGP_Tenant_10_OP_Zone
+    trunk_groups:
+    - LEAF_PEER_L3
+  12:
+    tenant: Tenant_10
+    name: Tenant_10_WEB_Zone_1
+  13:
+    tenant: Tenant_10
+    name: Tenant_10_WEB_Zone_2
+  3010:
+    tenant: Tenant_10
+    name: MLAG_iBGP_Tenant_10_WEB_Zone
+    trunk_groups:
+    - LEAF_PEER_L3
+  14:
+    tenant: Tenant_10
+    name: Tenant_10_VMOTION
+  20:
+    tenant: Tenant_20
+    name: Tenant_20_OP_Zone_1
+  21:
+    tenant: Tenant_20
+    name: Tenant_20_OP_Zone_2
+  3019:
+    tenant: Tenant_20
+    name: MLAG_iBGP_Tenant_20_OP_Zone
+    trunk_groups:
+    - LEAF_PEER_L3
 vlan_interfaces:
   Vlan4093:
     description: MLAG_PEER_L3_PEERING
@@ -147,6 +295,78 @@ vlan_interfaces:
     ip_address: 10.1.0.0/31
     no_autostate: true
     mtu: 1500
+  Vlan10:
+    tenant: Tenant_10
+    tags:
+    - compute
+    description: Tenant_10_OP_Zone_1
+    shutdown: false
+    ip_address_virtual: 10.10.10.1/24
+    vrf: Tenant_10_OP_Zone
+  Vlan11:
+    tenant: Tenant_10
+    tags:
+    - compute
+    description: Tenant_10_OP_Zone_2
+    shutdown: false
+    ip_address_virtual: 10.10.11.1/24
+    vrf: Tenant_10_OP_Zone
+  Vlan3009:
+    tenant: Tenant_10
+    type: underlay_peering
+    shutdown: false
+    description: 'MLAG_PEER_L3_iBGP: vrf Tenant_10_OP_Zone'
+    vrf: Tenant_10_OP_Zone
+    mtu: 1500
+    ip_address: 10.1.1.0/31
+  Vlan12:
+    tenant: Tenant_10
+    tags:
+    - compute
+    description: Tenant_10_WEB_Zone_1
+    shutdown: false
+    ip_address_virtual: 10.10.12.1/24
+    vrf: Tenant_10_WEB_Zone
+  Vlan13:
+    tenant: Tenant_10
+    tags:
+    - compute
+    description: Tenant_10_WEB_Zone_2
+    shutdown: false
+    ip_address_virtual: 10.10.13.1/24
+    vrf: Tenant_10_WEB_Zone
+  Vlan3010:
+    tenant: Tenant_10
+    type: underlay_peering
+    shutdown: false
+    description: 'MLAG_PEER_L3_iBGP: vrf Tenant_10_WEB_Zone'
+    vrf: Tenant_10_WEB_Zone
+    mtu: 1500
+    ip_address: 10.1.1.0/31
+  Vlan20:
+    tenant: Tenant_20
+    tags:
+    - compute
+    description: Tenant_20_OP_Zone_1
+    shutdown: false
+    ip_address_virtual: 10.20.20.0/24
+    vrf: Tenant_20_OP_Zone
+  Vlan21:
+    tenant: Tenant_20
+    tags:
+    - compute
+    description: Tenant_20_OP_Zone_2
+    shutdown: false
+    ip_address_virtual: 10.20.21.1/24
+    vrf: Tenant_20_OP_Zone
+  Vlan3019:
+    tenant: Tenant_20
+    type: underlay_peering
+    shutdown: false
+    description: 'MLAG_PEER_L3_iBGP: vrf Tenant_20_OP_Zone'
+    vrf: Tenant_20_OP_Zone
+    mtu: 1500
+    ip_address: 10.1.1.0/31
 port_channel_interfaces:
   Port-Channel551:
     description: MLAG_PEER_DC-LEAF2_Po551
@@ -226,6 +446,21 @@ loopback_interfaces:
     description: VTEP_VXLAN_Tunnel_Source
     shutdown: false
     ip_address: 10.255.255.1/32
+  Loopback10:
+    description: Tenant_10_OP_Zone_VTEP_DIAGNOSTICS
+    shutdown: false
+    vrf: Tenant_10_OP_Zone
+    ip_address: 10.255.10.1/32
+  Loopback11:
+    description: Tenant_10_WEB_Zone_VTEP_DIAGNOSTICS
+    shutdown: false
+    vrf: Tenant_10_WEB_Zone
+    ip_address: 10.255.11.1/32
+  Loopback20:
+    description: Tenant_20_OP_Zone_VTEP_DIAGNOSTICS
+    shutdown: false
+    vrf: Tenant_20_OP_Zone
+    ip_address: 10.255.20.1/32
 prefix_lists:
   PL-LOOPBACKS-EVPN-OVERLAY:
     sequence_numbers:
@@ -248,3 +483,32 @@ vxlan_interface:
       udp_port: 4789
       source_interface: Loopback1
       virtual_router_encapsulation_mac_address: mlag-system-id
+      vlans:
+        10:
+          vni: 10010
+        11:
+          vni: 10011
+        12:
+          vni: 10012
+        13:
+          vni: 10013
+        14:
+          vni: 10014
+        20:
+          vni: 10020
+        21:
+          vni: 10021
+      vrfs:
+        Tenant_10_OP_Zone:
+          vni: 10
+        Tenant_10_WEB_Zone:
+          vni: 11
+        Tenant_20_OP_Zone:
+          vni: 20
+virtual_source_nat_vrfs:
+  Tenant_10_OP_Zone:
+    ip_address: 10.255.10.1
+  Tenant_10_WEB_Zone:
+    ip_address: 10.255.11.1
+  Tenant_20_OP_Zone:
+    ip_address: 10.255.20.1
