--- a/playbooks/dc_fabric_deploy.yml
+++ b/playbooks/dc_fabric_deploy.yml
@@ -1,6 +1,6 @@
 ---
 - name: Manage Arista EOS EVPN/VXLAN Configuration
-  hosts: DC_FABRIC
+  hosts: DC
   connection: local
   gather_facts: false
   collections:
